# mail-forge

./: deploy.sh  mail-forge.service
mail-forge/: .env  Cargo.toml  config.toml  output.txt
mail-forge/src/: .env  lib.rs  main.rs
mail-forge/src/config/: loader.rs  mod.rs  structs.rs
mail-forge/src/smtp/: handler.rs  mod.rs  server.rs  stream.rs
mail-forge/src/webhook/: client.rs  mapping.rs  mod.rs  utils.rs
mail-forge/tests/: integration_test.rs
mail-forge/tests/emails/: email2.eml
