[package]
name = "mail-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
env_logger = "0.11.6"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.25"
mailparse = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json", "multipart", "stream"] }
rustls = "0.23.21"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
tokio-rustls = "0.26.1"
toml = "0.8.19"
